# ngrams-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: deserialize.rs
src/: lib.rs
tests/: get_corpus_info.rs  get_ngram.rs  get_total_counts.rs  search.rs
