[package]
name = "ngrams-rs"
version = "0.0.0"
authors = ["Martin Trenkmann <contact@ngrams.dev>"]
edition = "2021"
description = "A Rust library to search the Google Books Ngram Dataset"
homepage = "https://ngrams.dev"
repository = "https://github.com/ngrams-dev/ngrams-rs"
license = "MIT"

[lib]
name = "ngrams"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "deserialize"
harness = false
